--- a/doancsdl/DeTai_QuanLySinhVien/A.GiaoDien/DanhSachNganhDaoTao.resx
+++ b/doancsdl/DeTai_QuanLySinhVien/A.GiaoDien/DanhSachNganhDaoTao.resx
@@ -124,118 +124,112 @@
   <data name="btThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAY+SURBVEhLpVULUJRVGP2nh0YjkaAGlDyMkkTT8lEQmZLW
-        UJiKIdKMNJWQz2ZybBwn4k8Fecq67PISUQSBBRQWEncp3ovKsmzA7irgsuwqj10ULHNGXJTztf+6TVE6
-        TdOZOfOde+/5ztz57/3nMv+GOfHTHXyOuAYFZC/9NrQoKHVTYZBgVc6b0T6p7sHeAlcnm+2/Yx7PdVFI
-        fmBRtjzjjmFET3fH79L9ifs0fH0Y5ntmUvV2QlgvNG8WbahYmOr2lq3t3+HFZ6b6ZyziCVp59403jaQ1
-        aHH7zm26Y75D5nEzDRmHMGYeI0O/Ab/c/oVMN010rCYLq4765s4Tzpxmi3k43HkOz67JXimraBaj7VIb
-        VD0qdOm6oNVr0avvRZ+hz0qdXmed49Y4D+eVXJQg9OR6lXfKDBdb3GRwO38/y6+5WimlhrZ69Az0kN6k
-        p86eTgwM95NWq7WypaUFXO283InBkUEyDOvpYucFqA1qqu2opXU5gRru3Gyxf2Jhyov8o9VZJLvURNIW
-        KVSGTuoe6KJWTSt0gzq6evUqGQwGUiqV4LRC1Yo+k87i6aYGZT3atApqviyjw8XJ8OUvENliH8A9zuG1
-        XUe23heWCSCqLUJ5UxnOXaxCTdtPaGxvgOznJqjV6knk5praG1HbVgNJyzmIZeUQ1RUhXZyGvYI98Ep0
-        fM8WzzCLk72L2XQWhU2nqEJRTgW1+ai/VEvne2QkkVdB2dtGIyMjdOPGDeru7ganf5RXQ6GTWzzNdLqp
-        BNUdEqpUiClNLMShkhhaznu9wRo+fS/jsJb34Vi0MArH645RYfMpOirJxNn2CqpWS6hUVgxZVyPdunXL
-        yr6+PnC1orkM9V019KPFc7LmBMpaS6nI0ptcmojvRdEUmBUw4XbQwZN57tCUoC/jv8Be/h7sL2CRdCYe
-        qZUpyJQKkWO5fnn1xyFqKEB/fz+uXbtmJae5OW7teM1RizfN0sND8pkEHChksS/1G+xK2Aa3OIctjPuh
-        Z7/dmr2FvubtRPGFQrprvkuDQ4MwW6rZbLn3Q0MWbabx8XErufEflZt/4BkE18cx82wadufvom3ZEeST
-        OFvAeMXNEnwRF44dKRFIKU/E9evX/xd54iRLViS4zFcT55QwXvGzhOFZoRR5eDOONaYTAO4wLQX/0H8d
-        P8qTUHYQkbnhxGXOj/c4zbjGPh0dlrmWPju8EZkNR+jevXtkNBrB1b/rv44f5Yk9w+Kz3I30SdZ68jjk
-        mM44HmCCl8bNpaDY5fgww48+yvSj4CQ/hBW8TZ+WvEMROQHYJw2jsbExKwcGBsDVfQVh2FK+ksItnk18
-        f6zP8aOgdF8KPPgmgjLeJt/4+eS0/7HtzDSWmeESPXXcOfpxeLJT4LPfDsuS7bEy3RFrcl3wSfEc7K5Y
-        Ab1eP4m7xSsQJvJE0AlnrEhzxJIke8z73g4e7JNw/u5xuEQ9BadYxtv6L7wQ89QPL7J2mCe0o2W5z9Cq
-        rBkIqXanyOb59M1PvkhSh9Do6KiVV65cAVfZ+hDsUb5BETIf+viUG94tdaKlJ+zpFUuOR9xUcouZ1moN
-        5zAz/gn/JQddsOS4PXHG0CIP7Gx5jVhNALHy9cjT7yCTycR9a9JoNOB0imIHeL1rKVq9grafXYgQqTut
-        LHGkxQnTsDjdmZzjpmywxT/A3CPTT36Q5Yng/NngGtimVYhRhkKo2YZ8DYv29vZJzFOzEKi34kBbCNjG
-        AGytXIB1ec/j/YzZmM+fJbXF/gmnBMbe/8RL6h3nl1FU3XII9SFUYtpJRVoW50cySafTUW9vL8nlcnC6
-        sicG0pssiYzbiVVswL4Of4psWkSrC14yuCc+7WyLnYzZCXau606/rtkv34z8wQiS3oymKsMBqH4rog5d
-        Lan6GqhOcRoduhqq0wtw8baAzo1GUUrn5+BrN9FG8VsGz2T7l21xDwf3WKw+tahYoIhCpZ5F/QAfCmM+
-        VMMVuDwstVAClUmM1qE81PXzIO5jkfHzd1hT/IbUPXHmw3f+MHjzZ7735dnghvJW4cTgeAuNTmjoV/SQ
-        7sYFjEyoSG2sQp4yFl9Vh8pfFTw/+UD/CyyPkccCgduWjaLVgl1V4SVfST4t3VQamL4kw2v7XJ7TXJvt
-        EWCY3wECyiFOadGK7AAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAZDSURBVEhLpVULUFNXGs70obUjSwV1gVYelq6saLX10UKp
+        VVfbcYtVcRHpjHS6FeqzM3XsOE4pV7dAQlBDSOQhyqO8Q0QRWhLeJQkQ0kDKQx5JSAAjdAS7rjNiUL5/
+        743ZadnV6XT2m/nm/89/vv+7Z+acew7vt7BUsMA1MMUrdHPWui8jikNT9xaFSrZcejMuMNUnLEDi5e6U
+        /X4sF3mtDs/fVpylTb9nnbDQ/en79HDmIdlu2mB/YKeOfj2kjVL7vpLdFatSvd9ytv02/MW8uSHpq0Wi
+        9uSHY7fHqM/Uh7v37tI9+z2yT9tpZHQEU/YpMllM+PnuzzR+e5wyFOex5UJQ7nLpovlOm8fDR+T6wvas
+        TarLTXK0/diGjt4OdA90o8/Yh35jPwZNgw4OGAccNW6O03DaSlUlIvJ2dQWcW+jptJsNbuXvZQarlXoF
+        1bXVYuDGAFnGLaTv1ePGT6NkNBodVKvV4KK+Sw/bhI2sP1lIpW9Gt7Wb6g31tPPSth5u35y2v2DVuZfF
+        F5SZpOptpip1FbqsP1L/jT5qMbTAbDPT8PAwWa1W0mq14PLWjhYMjZtZTT/VaWvxg1FH6usqSioUIEi8
+        ssRp+wg+fNfXjp458DBFJkKBMh9lDTJcU1VA0VaNel0dGtsb0NnZOYtcrUFXD2WbApXqa5A3lqGgJh+p
+        cjFOiI7DX+j2rtOex1tzJqCUSWVQ1FxAFborlKfMQWNvPWkGVFSpqYDe9ANNTEzQrVu3qKenB1z+neZb
+        6MxaVqOmkoYiKA3VdE13lcTyFCTK4mmD6PUmh/mCEzzXHaL3p+JSYpHdcJGK1AWUVilFVWcFKburqbix
+        EKq+7+nOnTsODg4OgouXm2Ro7KujGlZzSZGF8vYyKmZ7BcWJOFUSR1sz35nx/trVj/fHxDmhn8Z/ghNn
+        j4PJY8Avjce5ciGkVSnIZI9fdu0FFNTlwWKxYGhoyEEu52rc3AVFGqsVsz3JEJQmgPmGwclzX+BowkF4
+        813383wSX/jyQNZ++jz5CEpbiui+/T4NjwzDzka7nT33IyNsbqfp6WkHufF/Ild/pBkG18dRelWMY/lH
+        6WBWNAUKl0h4/vzFkk++jsJhYTSEZYm4efPm/8VkOZ/1igHn+apwqYznL1gsjcqMoJikfbj4fRoBoLGx
+        MTbgf/Jfj5+kSZAxiMmNIs5zhcBXzvNKeD4uMmMHfZy0BxlNKfTgwQMaHR0FF/87//X4SZrTpQw+zt1D
+        H2buIt9EtzSe2z94Yev4yyj09Aa8nx5MH2QEUxg/GJGFb9NHsncoOnMzTioiaWpqykH2ZwMXT+ZFYv+V
+        TRTFavaeDcGuS8EUmhZE25g3EZr+NgUJVpD76acO8eYzvIWecXOnPeKehh8zB4HMPKwXuGBTqhu2X/TE
+        h4VLcezyRu56mMVj8o2ILPBDaJYHNordsJbvguVsry/zLDy+ehqesc/BPYEX4PgXXop/rvJldnK5dB6t
+        z/0DbTm/EOFKH4pRr6AvqoOQ3B1Ok5OTDl6/fh1cZGrDcVz/BkWrAulvud74S5k7rctxoT9zH+HPJe/4
+        +e0Ocw6LBM+ErGU8sTbbhThhRL4vjrS9RkzPZmI0u/CN5TCNj49zm0kGgwFcLmw9DJFpB8V1b6RDV1ch
+        XOFDm2RutCZhPtakeZAHf85up/0jLEtZkPfX834Iy1kCroFp2IJT2gikGA4ix8BAp9PNYnYnA1HnATBt
+        4WDqN+NA+UrszH4R70mWYIV4scJp+wvck3guITmvdB/WrKfYmg2QWsJJNn6E8vsYaCYyyGw2k8lkIo1G
+        Ay4v7z0FxW2GSsYOEdO6GycNIRTTvJq2Fr5i9RE+7+G0nY0lSfO8dspf72E0+5BviybF7TiqMDHo+lcx
+        Gcz11DXURDWtJTCY2TvIKELrXQl9NxlLQv3fITbupT1X37L6nXH5k9Pu8eAei60Fq0tFrbEoNzKotZ5F
+        62gOOmyX0WVj3wlbJTpuyNEyko0aSzLkgwwk7V9he+kbCh/hosev/HEIEC9699OqsKYrLdIZ23QbTc70
+        0D8xQANjzZiY6aLO0Qpka0/jM2WE9lXJi7M39PeAfYx8V0q89+8p2So5+m2U7LPqj8r2lm1LW5vuf2iZ
+        yH2ZU/YE8Hj/BqOjGWtPlS/dAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btSua.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANoSURBVEhLzZVtTFNXGMdvFBsGtY0F+kbp6AVqBkokc5ub
-        MZ3EGbMPYhSBJSgSCAIxOOaMOhHqW4wxZh9mDGNmRBKGQlCizTbFrFFn8aWIlSJQbTtRkWkrkm6JJp7+
-        fW5yPhtv1cRf8su9ufd/n3vOc3LuFd5rJgcG0v3t7auCx7oXjI25PuCX3w4Dm7Yc6F+zDp7VJehN1MLb
-        mITaqrxl/PabMdrcXOdvtONpewe8Nhu7qjGzQNXHcPyYNsYjsTPl91s9ZeUI/toafVJUilGzld1SmVno
-        52XwtObgTlv3HB6NjctFRcOT3T2Y3PwDQmI2wnoR41oDgG3oKVFieO/BxTwqn1v2XQfGDx1G4FAz8+V9
-        zsIGC0aUaezOn1+yp4EV+EkQ8K/Xq+RxeTxyuxd5ajYg0NwSvU199xkzWFgjYmhlLguFKlirdTr6Cop3
-        8Lg8rlfXHnTabM//6ezC/cpqPDBbEdKJeJhpotY04Nw2E04Iyn4el0/vilXn71ZvgDsrG78b0phTo2fX
-        EvUs4inDjVP50SPUmom+Ph2Py+NeT0/hcEMjzjQ1Rf9SJ8OVZGRHFKqos8DKgP1oyxYwUFNfzuPyiEQi
-        2uvF3/w/deo0Br8uYH0pRnQmqtjlZJrFbD1zNHyIYxnW0zwun/515c5Qx3FMNe3BY2su7unMGEo2oitR
-        DZdai5E4DfYWFn7F4/LwtbRUBOx7EGw9ysILbPAZRRZKzcBNQzqtgYF1TJuBCkE4nqXRfcYfkYdr+XL/
-        5G8deFJcipApE2EqLjmmt+BKghq9eZ/+wqPyue9wLPHV1cNXuZ75suaysFHEaGoGe0gby6vRwxGXcJdH
-        Y8NdWdX2wL4bI7ShRqXW0AuG6OjTmuCcHo/IhQu5PBobFxcvDYxX1eJRZg61RcSE0YLb2jS4VcnYGqf4
-        nsdi55wo/hdcmE+jtrBBWtSRFBP6aQ/sU8Rv4pGZpIWcR0qLLDmfzCZV5Ks5qdYOu/Vm/J2SGh3U6OCa
-        OetFybQ4qbhUoICsIbeQ0reniWwgvyNLyUzy1Ux05Qf/SFCiN175bKdCcSlJEKS21JNSwZ2kndxObiTX
-        ktIMUsnX+23ePJt35dvKpE46lQpsJaURSiOuI8vIpeRH5CwynpSNnlxIfkF+QuaQ6aSGjKngO0IQXgKu
-        Go2nZF75rgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANlSURBVEhLzZV/TBNnGMcvyBqE2sYC/UXp6AE1wkZG9stp
+        TCPZiIkJmMgAEyYQCAFicMwt6sagbhpjjPEPjWG4hIyEIRAcmZ0aMdahtpoUal1pGViYqNixViTdki3Z
+        2++eS96/za6biZ/kk7vcfe+5933evHfCC82y15sT6u/fMX92ZMPCgms1v/z/4N2779jEB3XwvV+NsTQt
+        /J3paG0q3spv/zd+7u5uC3Xa8bR/AHdsNubSmNlc0+twnMhe4JHEWQmFrL7aesz2nIk/qazBlNnK7qrM
+        LPLVVvh6C3Gvb+QVHk2MW5WVweWRUSx/8ikiYgGiehGLWgOAAxitViJ4+PgWHpVPwP7FscVTpzFzqpsF
+        it9hUYMFfmU2m75kY0/ntuOkIOBXv1/J4/JY8ng2+1p2U/HT8SD1PWDMZVGNCF9ZEQuHa1mvdRXc5VWf
+        87g8Jptbjztttr9+GRrGw8ZmPDJbEdGJeJxnotZ04MoBE84Jygkel8/Y9h0/3m/eDU9+AS4YsplTo2fu
+        ND2L+WrhOVcS/5paE3a7dTwujwejoxXBjk780NUVv6rOwHi6kXUrVHHnNisDjqKvQIC3pb2ex+URi8W0
+        k1U7/1j5/jy8pduYO9OIoTQVu5FBs1inZ46Ol3E213qex+UzUVfvjAwMYqXrEH6zFuGBzoypDCOG09Rw
+        qbWYTtbgcEXFezwuj5menoY5+yHM9n7DohtsCBhFFsnKxaQhh9bAwAaSXkKDIAzma3Rv80fk4SorCy1/
+        O4AnVTWImPIQpeKSC3oLbqeqMVb81hkelc9Dh+PdmbZ2BOoaWCD/VRY1ipjKymWPpY2l0cORnHqfRxPD
+        09jU98j+Jfy0oaak1tALfHSc0ZrgXJWC2Ph4EY8mxvUtpXOLTa1YyiuktogIGy2Y1WbDo8rA/mTFxzyW
+        OFdE8ff5TSU0agvz0qJOZ5owQXvgiCJlL4+sIS3ka6S0yJJvkAWkinw236m1QY/ejGuZWfGfNDq41qz9
+        uzopWSouFSgnW8h9pPTt6SI7yI/IGjKPfDbh4ZL5i6lKjKUo/zyoUNxMFwSpLe2kVPAgaSc/I/eQu0hp
+        Blnkv/tt3r1cfPvDxvQhOpUK7CelEUojbiNryVJyPbmWTCFloyc3kRvJN8lCMofUkAkVfE4Iwj/pk4zu
+        yLBFRQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btXoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAARdSURBVEhLzZZ9TFZVHMfPPeeee5+XC5cHeYclLxZCExUF
-        o0mh6dxw9Adms/VHa9EI/xBqsiEJrBTiZY8RKEo8lEhJSCBvS4wI0xnE28OrUiKgoxmIzQXWoxK/zgNn
-        cwWMl7/6bHd3+/2+v+/O+Z3fzr3ISp6Pz8tNiYdaxooLhmrDd1UfUx0CZxLLJAuh1QUuTskNeyKvVYYG
-        j+UIQjXKcnZ2Ktnx0qmh/JMwUVEK7TFR9z739k7+BNnb8rolwcz1J7Tad2pCtzZ17I+ByuAgMApCA2o6
-        lNA9+dNVgObLAOdLAM7kwf3kOLgQuK7FpGhe4PULkoIQzqb4jbrNm7tuxsVCT9wBKA8JKc01GEIyEHJD
-        fcajdyyXLgJ8VwXTp4/DVGYiQFI0QHQEmNerf2WJeD/3mkOOKAZ/6eBwsT9iN9yOjoKqLVvMOap+B0/P
-        ctLTc31FWNjH1w689uCxMRkgJQYeRYXDw4gA+HurGwx5KZBHSZYRIS0vQSaEbLJFnPC9u8vkyLYwaPVb
-        +zhb0SWlGwwql8zlI0rXff2Mz9neYP+p6chNYHneA8b9VPjdWw8DThIUSMSUjxDNlGWfcxK+1KkqMLjG
-        C2rc3UaNhOzhNotzQhRfrF6luzrorcLYaj0MO0sw7CBBlw2BQirUlonkdq8kQq9WAyUauTtNREG8dOmw
-        g9OYJBzbaCv+OqCKcF0h0KvBYKYYuogArViA01RoYJPjxUtWRjpCHqdEoapNZuaiAO0Cgg6EoBjjnoM6
-        5MJlKydFj5wKMf6hha24g5ub2btaxI/SKH2Ty1ZGqiiGfkXIL53M0MyMf2TvC4S1SBLgho5ArU6cSBTF
-        57h8ebCpCK8i+F6ndcXsaWM7KKLCNxlsAMo0ZGDYnsKoqwxnFKk1FiE7XrY00iQSXoPxXat5G3u6mXkJ
-        28kRNp7WfIok+Zep5OfJp3UwulYBo5Z+yMKCNbcohyndWIHxyIw5a0kPO9g6ifyZKpNtXDLDYST5la/S
-        DEKwCldcNfcTkBjCUwvDRlPHpqPLat7OVt3Het2qJcDaksgl/yIe0cDLHtL49AZbKLah9Sy08C6sF1au
-        KBRZV93J5rxXi6HfRoTPNGJ9PLsWuGwOKYRENtvrLbe8FUjF+FUenssHhOysp+RBHxWgm5kP21Gos6F3
-        EyndwCULkiOTrDvsvqoxyB1sofMfeJ6iHLvu8xT022nhpoFdA44ypErzt+a/MFPlvCK333DTQzrG+3j4
-        CUcRcq181q/nt8hwuBXgBWNeemi2ly1GrdadSxblCCHbzY5aKNFLhXsRIjw8i1GW19TtDB2ZTH4Pxvft
-        Ast2X+hzVB+eVGVPLlkSJg3Jv6KTJkol5MtDs7AtSsVBm8qnzn4KUxnxAHGvQKO/w/hxtnUuWRLMx7OI
-        io1VlAbw0BOSJGl388HXLX98kQuDb++FTEWTwFPL4hxrD8w3ru+yr1W+v6+pNe6tobKNAd++z/4OeOr/
-        DkL/AO8Srk0bMkQYAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAARcSURBVEhLzZZ9TFdVGMfPPeeee38vFy4/5B2WvBlBExUF
+        o0mh6dxw9Adms/VHa9EI/xBqsiEJrBTiZT8jUJD4USIlIYG8LTEiTGcQ769KiYCOZiA2F1g/lXg6Pzib
+        K2C8/NVnu7vb83yf7855zrNzL7KQ6+X1clPC4Zbx4oLh2rDd1cdVu4DZxArJRGhtgZNDUsPeiGuVIUHj
+        2YJQjTIdHR1Kdr50ajg/DyYrSqE9OvLe556eSZ8gW2tetyyYuf6kVvtOTci2po4D0VAZFAhGQWhATYfj
+        e6Z+ugrQfBngfAnAmVy4nxQLFwLWt5gUzQu8flGSEcJZFL9Rt2VL983YGOiNPQjlwcGlOQZDcDpCLqjf
+        eOyO+dJFgO+qYOb0CZjOSABIjAKICofODepfmSI+wL3mkS2KQV/a2V0cCN8Dt6MioWrr1s5sVb+Tp+fI
+        c3ffUBEa+vG1g689eGxMAkiOhkeRYfAw3B/+3uYCwx4K5FKSaURIy0uQCSGrLBHHf+/qNDW6PRRa13k/
+        zlJ0iWkGg8ol8/mI0vVfP+11ti/Ab3omYjOYn3eDCV8VfvfUw6CDBAUSMeUjRDNk2euchC91qQoMeXtA
+        javLmJGQvdxmaU6K4ovVa3RXhzxVGF+rhxFHCUbsJOi2IlBIhdoykdzuk0To02qgRCP3pIookJcuH3Zw
+        GpOEYxqtxV8HVRGuKwT6NBg6KYZuIkArFuA0FRrY5HjwktWRhpDbKVGoapOZuShAu4CgAyEoxrj3kA45
+        cdnqSdYjh0KMf2hhK+7g5p3sXS3iR6mUvsllqyNFFEO+IuSXLmbYyYx/ZO8LhLVIEuCGjkCtTpxMEMXn
+        uHxlsKkIqyL4XpdlxexpYzsoosI36WwAyjRkcMSWwpizDGcUqTUGIRtetjxSJRJWg/Fdi3kbe3qYeQnb
+        yVE2npZ8siT5lank56l1Ohh7RgGjln7IwoIltyRHKN1UgfHorDlrSS872DqJ/Jkik+1cMssRJPmWr9EM
+        QZAKV5w19+ORGMxTi8NGU8emo9ti3s5W3c963aolwNqSwCX/Ig7RgMtu0sTMRmsotqL1LLT4LiwXVo4o
+        FFlW3cXmvE+LYcBKhM80Yn0cuxa4bB7JhEQ02+rNtzwVSMH4VR6ezweE7Kqn5EE/FaCHmY/YUKizoncT
+        KN3IJYuSLZPMO+y+qjHIHWyhCx94rqIcv+71FAzYaOGmgV0D9jKkSAu35r8wU+W8IrffcNFDGsb7efgJ
+        xxByrnzWt/e3iDC45e8B4x56aLaVzUat1pVLluQoITs67bVQopcK9yFEeHgOoyx71+0KGZ1Keg8m9u8G
+        8w4f6LdXH+apsjuXLAuThuRf0UmTpRLy4aE52Bal4sDN5dNnP4Xp9DiA2Feg0c9u4gTbOpcsC+bjXkTF
+        xipK/XnoCYmStKf50OvmP77IgaG390GGoonnqRVxjrUHFhrXd9nXKt/Px9Qa+9Zw2Sb/b99nfwc89X8H
+        oX8AmCKuQfDbfHIAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btInBaoCao.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAVbSURBVEhLrZULTFNnFMc7FRFUNCJDJ3vj4qJjT6eiYA0y
-        3xsOdCqKL8w2sxh1UVF8oY4NBQEFFRRRmDBAUB6CKNLKowJt5Q2drRShQKG8BhQs9N7/TnNJpgHDov6T
-        m3vz3fv9zvnO953/5Q2hYccvZxyIlvQJP5wxc07/2OuRV7hwVVY1W5tfDbT2AKt/PJxMw2O4t68gZ/eD
-        0wXVbJaIwMpmFr16BnoATps979Dr8dxXLyGr2bNN/KNyQvJqgdI6Ft06Bt29QGMHraAbWLbOwxBgHPf1
-        S+jbLZ72uZR1s5aBrg9o0QI1rYCske7/AIucD6TZzf1ha6C/KJhvv26vldXUKf1T/58cV++zTyxk0UPw
-        unZA3gSU1ANiFSAUd+Kn0JM97gXrEKLyR1VbCyQFDfqVK3fuoqnDOMIQsv1uj11Utg4ayrysAZASWFDa
-        i9+ib2B5Gh9uj2fhcIsTAnTrEazfhBJdLqqVT+HisucYTR/OUV4gS0vL0e47Ll0MSdWilrLPkQMhCRK4
-        xK2Cs+wT7GtaBr+e9TjPbIVvtyt21y+GU8UMpFQLIJZ2wtp6lnM/anCdDhCGN1Gdzyd24K6oCm6RO7BC
-        aoMd9Y7w6VyL8/otOKNzw37NCrjJbeEg/gjT7phjUpwJcmRN8D8rrCSMBUcbRF6/CyOibmmQcFOGmw9k
-        OF7ogbPtu3BG74bgvs3wav0e25TzsfThdHwqnIy3bo7GhCsjYerHw5rI7cjM7sHUD75a048bqKNeqTG5
-        BRrUa+j0tLGQqRXQNuvwl3Q/fq6dj5Vln2FWztt4J8UMEyNHYlyQEYy8eLDx+Rpx9xUQFQN8/pqLhDLm
-        iM8oIiJidEp6DaQVQG4hUFgJdFHntijVaFR04UTFEbyfNgYWMcYYf8EIJt48WByxwLGEaBQQOEsC3BMD
-        C7/ZlEo4M476jO7dK7cXF2tRShtbSEHyS7hA6mZqMuqDKuoNm6jpMDnJg7HnG9hy5SBED4FsKZCRzyI5
-        i0G8AHBYuHnwTjcEKJVpIX8CVFYBxY/oiJbT+S+jfqBeqKCxxHwFXMN2ISm3ASIKnlnAIjWHQYIQCI1r
-        QWiiHgscNr4gQHq5/aMqOp5q8h6yib+VBH0MFMm4+yNaQS5lbMhaSKW4LWJxQ8AiOl2HvV4ZWL5kI06E
-        NYPv8IIVpFOAmjotNFSOBtrkGmoyRQ1ZBGVerqBnWlmWlMHdPBZJ9xnE3GUREFmBfb4x8A6Kwvbdp7DT
-        Tw1bW5dYwg30qsxM2Vx1Qze0tLFt1AtNVHsVleYJ2QRXNgZ38vSIywAuXK/DwcAkePhew+HT13AqLAXX
-        szRQtgCnr5ZI3p22eHY/9j/FxsYOd3X1DM/Lr336lNyzi5yzhbq5kVajIqN7KGMRn8ngj8tF2OMTiV+O
-        ROKQXxyC4+VIkrC4XaSHSMagipJStQGHAtKuTppkPaDpRpqajvtitcuv4QKBQttJfmS4DIGyixiEJVOA
-        0HTsPv4nfMIliH/Qi4xSFmnSPojlDATFfVCqDf8O+nGQkkpZJTGtOPTzMqJYHy9Zsi0wOaWsvb2DyiNm
-        4B/HwH2/AKmiVnJSOvclDPIJnFHYhxIlA3kdR1ZoGJwIutUz3szsJLEmcsjBNYICTeXz13oHXypUe59T
-        dM+zc0md8p5NkIdvenE97ZVMxaKyhoGEytNBFh8UJcSmrUd7FzlueEDzP+cwQ8tgw4Yfyzy6rOkyNjc3
-        m/nlPKdTCcLHqi4CJ+ZWaRYsdW2ym7NCYWk5+dyoUaPs6TtK8NVk8uaECY5zHVedMR4xYruFufmGsaam
-        y2l8LPf6NSkwMHCguT0nHu9fr63hTRa2d/wAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAVbSURBVEhLrZULTFNnFMc7FRFUNCJDJ3vj4qJjTx9DwS6K
+        84FTB/hC8cWWzSxGXRQVFVHnREFAQUVFFCYMEJTKQBRp5VGBtvKGTipVKFAoBQYULO29/53mkkwDxkX9
+        Jzf35rv3+53zne87/8t7gQYdupi5J05qEH04ZerXfWOvR/5RIo9sZW9dwSOgtQfw+HHfDRoewb19Bbl5
+        752cpTRmiwmsbGHRa2RgBLBkg+8tej2a++olZDdjhkVwbG5Efh1QVs+iW8+guxdo6qAVdAOLVu8yBRjF
+        ff0S+m6jr3MeZd2iY6A3AFodUNsKyJvo/g/wrduedKeZKzaFBovD+c6rd9rZTZzQN/X/yWW5j3NKEYse
+        gte3A9XNQGkDIFEBIkknfjp9rMe7cDUiVMGoadNCWlhnXLZs6zaaOogjvECOS3Y4xebooaHMyxsBGYGF
+        Zb34Le4aXNP58Ho4Hfu1SxGiX4Nw43qU6vPwSPkE7u47DtL0wRzlObK1tR3uveXC+Yg0Heoo+9xqICJZ
+        CvdED7jJP4FP8yIE9azBGWYTArs9sb1hPpZWTkHqIyEksk7Y209360MNrBMhoqhmqvOZlA7cFtfAK2YL
+        FsscsKXBBQGdq3DGuBEn9V7YrVkMr2pHzJF8hEm3rDEu0QK58mYEnxJVEcaGow0g/99F0bF/aZB8XY7r
+        9+Q4VLQLp9q34aTRC+GGDfBv/R4/KGdj4f3J+FQ0Hm9dH44xl4bCMoiHlTGbkZXTg4kffLWyD9dfBw6k
+        xecVatCgodPTxkKuVkDXosefst34uW42lpV/hum5b+OdVCuMjRmKUWFmMPPnwSFgGhLvKiAuAfj8FecJ
+        Zc4Rn1J0dPTw1IxayCqBvCKgqAroos7VKtVoUnThcKUf3k8fAZt4c4w+awaLIzzY+NngYHIcCgmcLQXu
+        SIC589anEc6Koz6lO3cqnCUlOpTRxhZRkIJSLpC6hZqM+qCGesMhdjIsjvFg7vsGNl7aC/F9IEcGZBaw
+        uJHNIEkIzJm7YeBONwUok+tQ/RioqgFKHtARraDzX079QL1QSWMpBQp4Rm6DIK8RYgqeVcgiLZdBsgg4
+        l6jFuRQj+HO8nhMgo8L5QQ0dTzV5D9nE30qCPgSK5dz9Aa0gjzI2ZS2iUtwUs7gmZBGXocdO/0y4LliH
+        w5EtFOA5K8igALX1OmioHI20ybXUZIpasgjKvEJBz7SybBmD2/ksBHcZxN9mERJTCZ/AeBwJi8Xm7cex
+        NUgNR0f3BML196qsLPlMdWM3dLSxbdQLzVR7FZXmMdkEVzYGt/KNSMwEzl6tx95QAXYFXsH+E1dwPDIV
+        V7M1UGqBE5dLpe9Omj+jD/ufEhISBnt6+kbl59c9eULu2UXOqaVubqLVqMjo7stZJGUxOHqxGDsCYvCL
+        Xwz2BSUiPKkaAimLm8VGiOUMaigpVRuwLyT98rhx9v2abqil5agvlrv9GiUUynWd5EemyxQop5hB5A0K
+        cC4D2w/9gYAoKZLu9SKzjEW6zABJNQNhiQFKtenfQT8OkqDMoCSmHYd+VmYU6+MFC7xDBYLy9vYOKo+E
+        QXAiA+/dQqSJW8lJ6dyXMiggcGaRAaVKBtX1HFmhYXA4JKVntJXVMWKN5ZADawgFmsjnrzoSfkGmPnha
+        3j3LyT1twnsOYT6BGSUNtFdyFYuqWgZSKk8HWXxYrAhr1vn1znNZe4/mf85hXiyTDZt+LLPosqfL3Nra
+        auqXs5YeTxY9VHUROCmvRvPNQs9mp2muClvb8aeHDRvmTN9Rgq8mizfHjHGZ6eJx0nzIkM021tZrR1pa
+        utL4SO71a1JoaGh/c3tGPN6/roPhAvdpWu8AAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="ColumnMaKhoa.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
 </root>
