--- a/doancsdl/DeTai_QuanLySinhVien/A.GiaoDien/DanhSachTaiKhoan.resx
+++ b/doancsdl/DeTai_QuanLySinhVien/A.GiaoDien/DanhSachTaiKhoan.resx
@@ -124,118 +124,121 @@
   <data name="btThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAZCSURBVEhLpVULUJTlGv6nTpqNRIIaUHIxOpJoWl4KIo+Y
-        Vp7wqBgizUhTCXltJsfGcSJ+LwTrct9duYQoIHLXhUQuwnJHll2gZRfltjeBhUXB8jgjLsrznv3XPVOU
-        TtP0zDzzvt/7Pe/zf/N/3/9/zJ9hIW+OrWeCk9+6tFXfBub6CXbk+AnXp78d7ilw8fcQOtlbZX8di+Od
-        lgec25ib1pp8Tz+mo/uT9+nh1EMyjhphemCizn4FRLUi0868bSXLBM7vWNv+HO6JzEyf5OXxAlncw5Hb
-        I9Sn68Pde3fpnukemSZNZBg2YMI0QboBHX6++zMZbxsprSoF63/wylgsmjfbavN4uMTbvrApzbexuFEM
-        eZccnT2duK6+jj5tH/q1/dDoNBaqtWpLjZvjNJy27GoZAjO3Kj3i5jpa7aaDW/kHqd5Nle0VVCuvQe9Q
-        L+mMOlL0KDA0Okj9/f0WtrS0gIuKawoYxgykH9XRVUUzVHoVSRQS2pK+sYvbN6vtr1gW90riD5Wp1Hit
-        gcpbyqHUd1LPUDe1qlqhMWjoxo0bpNfrqa2tDVwu62yF1qgxa3qotq0Gbf1yarreSDF50fBKXJpntX0E
-        lyjbNw7E734ovCBAbnUOLtZfwOWrpaiSX0FdRy0a2uuhVCqnkavVd9ShWl6FspbLEDdcRK4kB6fEIhwW
-        HII73+59qz3DrIjxyGdPschpyKYSuZiyq7NQe01Czb2NVCYtRbu6jcbGxujWrVvU3d0NLq+UVkCuaTVr
-        mqiwPh+VinL6UV5MIrEQkQURtCb+zTqL+ZzDjO3m+I8mwoVhOFNzmnKasim1LBmlP5VQpaqcChry0Nhd
-        T3fu3LFQo9GAi8WNF1DbXU1XzJqMqjO4KCukXHNvdMFJHM0Lpw9TfaecT9i6MS9GzvD7MuoLHE44hKPZ
-        LPhFUUgsiUVyuRCnzccvsyYdubXZGBgY4N69hVzO1bi59KpUs1Zk7olDdBEPx86zOJL4DQ7w9sA5ynYX
-        4xL5wre703bR13H7kX81h+6b7tOQYQgmczSZzOfeYDDnJpqcnLSQG/8/cvVHmiFwfRyTL4lw8NwB2pMW
-        Qp78BULGPWq+8IvIYOyLDUHsxZMYHR39W4wT881eoeA8X+cvLGDcefNFwamBFBqzE6frkwgA3bx50xzw
-        h/y34ydpeBeOIzQjmDjPJTzXIsbp++fCg1I202cx25FSl0APHjyg4eFhcPH3+W/HT9JEFLH4LGM7fZK6
-        lVwj7ZIYu+OM/6qoReQXsQYfJXvTf1K8yZ/vjaDz79KnBf+ikNPrcKQiiCYmJiwcHBwEF49kB2GX2JeC
-        zZodCT7Ymu5NfkletPH42/BLfpe8eEvI/thTe5nZLDPXMXzmpEP403BjZ8Dz6CysjraB7yk7bDrriE/y
-        FuJg8VpotdppPChei6BcN/idccBakR1W8m2wmJ0FV/YZOHz3NBzDnoX994yH5Vt4OeLZS6+YJxeLZtHq
-        jOdpfcpcBFS6UGjTEvrmiheiVQE0Pj5uYW9vL7jI1gTgUPtbFNLoSR+fc8Z7hfa06qwNvcY9JGomOUfM
-        llnMOczj/cNn5XFHrDxjQ5wwMMcV+6VvENu1jljpVmTp9pHRaKSRkRFSqVTg8ljZPsSrN1O4ai3tvbQM
-        ARUu5FtgRyt4s7EiyYEcomZss9o/wqKEOZn/TnGDf9YCcA1s/XqcaAuEULUHWSoWHR0d05ipZCFQ7sYx
-        eQDYunXYXbIUWzJfwgdJC7AkcX6F1fZX2J9kbHzOvqra17yawiRrINIFUIFxP+X0sWgeS+F+EaRWq0kq
-        lYLLS3pOoOI2S3kje4mVbcMRhQ+FNiynDedf1bvwn3Ow2k7HgpOznLYUvdl1VLoT5wwhVHE7nEp1x6D8
-        by4pNBJSautIIiuEQlNNEq0ALXeFVDYeRrGKz5HYv4O2F7+jd4ux+afV7vHgLosN2cvzBbIwlGhZ1Awm
-        QDachU5jMa4Zy80sQ+eIGK2GTEgG4iDWsEhq/w6b8t+qcOHPe/zKHwePxHnvf1nqXyduFU0ZJqU0PtVF
-        v6CX1DebMTalJOVwKTLbIvBVZWDr68KXpm/oX4H5MnJdKnTetT1vg/DA5eCCr8o/LdxRuDFpZbL73kXx
-        9oussieAYf4HX9YfUidTqx4AAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAZDSURBVEhLpVULUFNXGr6z3dXakaWCukBXHpaurGi19dFC
+        qYuu1nGLq+Ii0hnpdCvUZ2fWseM4pVyfBCIYQlIeIhqKvDGgCAISCG+SyBACCjEEgiabMIJd1xkxKN+/
+        98bstOzqdDr9Zr75//Of7//umXvOvYf5KSxMnOMamOoVti571deRhWFpOwvCJOtz3o8PTPMJD5B4uTtl
+        Px+LRV7LI/I2FWarMh6bxobpyeQTejb1jKw2K+xP7aS90w1po9S+q2j7lWVp3h84234a/mJmZkjGcpFY
+        nfLM+sBK+iE9Hj1+RI/tj8k+aSezxYwJ+wQNjQzh+0ffk+2Bjc7VZWD9uSDZYum82U6bF8NH5Pr65uy1
+        LeXNcqh71dD2a3HLcAt6ox53jHcwODTooMFocNT4OV7Da6vaqhCZu00XcHaup9NuOviVb8wKbq3tqqEG
+        tQJ6s56GbcPU3d8N8+g9MhgMDra3t4OP3X3dsIxZyDQ6TG3dreg19ZJCq6CtOZv6+H1z2v6AZWffFJ+r
+        zaKWW81U3V4NnamHBsz91KnrhNFipJGRETKZTKTRaMDnKm0nhmxGTjNADRoFbho01Hq7hc4UChEkXlrk
+        tH0OH4HrOwfP7nmWViZGwY18XFaW4VpbJerUtWjsakDTTSV6enqmka8puxpxQ12HqvZrkDddRkF9PqRy
+        CY6ID8Nf6PaR055hViQHFLNSFgXNl+iKppzybuSi8ZaC2vQtVNVRia7BmzQ2Nkb379+n27dvg89rOq5D
+        Y1RxmlYqURahVnudrmoqSCJPQ0LJKVojelfpMJ9zhHHdIvp4Ij4tDhcazlNB6yXKrErHte4rVNt7nYqb
+        CtHS30QPHz50cHBwEHwsby5DY3891XGai3U5kKtLqZDrFRYn4lhRPG3MCp3yPunqx/wuYUbYFwmf44jo
+        MNg8FkmlCUitSEZ6dRqyueMnU5xHQUMe/97B7YGDfM7X+LnzdZmcVsL1pEBYKsCxSyyOpn6Fg4K98Ba4
+        7mZ8El7/ek/2bvpHygEUtxfQE/sTume+BzsX7Xbu3JvNXG6nyclJB/nxfyNff665B76PZ/pVCQ7lHaS9
+        2TEUKFwgYfwF8yWfn47G/uQYJF9OhM1m+0VMkSdxXrHgPd8WLixh/BPnS6OzIin2zC6cb0onADQ6OsoF
+        /F/+4/HLNIKy44iVRRPvuSTRt4zxOv1afFTmFvrszA5kKlPp6dOnZLFYwMf/zX88fpnmZCmLz2Q76JOs
+        beSb4JbOuJ1gwlcJFlHYyTX4OCOY/poZTOFJwYjK/5A+LfkTxWSvw9GaKJqYmHDw7t274OPRvCjsLl9L
+        0ZxmpygE23KCKSw9iDYdfx9hGR9SUOIScj/+q33MbJaZ6xk/c9Ij/hX4sTMQyM7CaqEL1krdsPmCJz4p
+        XIhD5aEwGo3TeEgeiqgCP4TleCBU4oaVSS5YzPX6sr+BxzevwDPuVbifZgIc38LvT71a+SY3uVg6i1bL
+        fkvrM+YiotaHYluX0Fe1QTjTG0Hj4+MODgwMgI+sIgKHu96jmJZA+tt33vhzqTutuuhCf+QfIphJ3qdm
+        qx3mPOYl/jpk5XFPrLzgQrwwMt8XBzrfIbZvHbEd2/Dd8H7iTghZrVbS6XT8aaFk1X6IBrdQfG8o7bu6
+        DBE1PrS2xI1WCGZjRboHeQhmbHfaP8ei1Dm5f8nwQ3juAvANrHI9Tmgikabbi1wdi66urmmU9bAQ9+zB
+        MXUE2MZ12FOxFFtlb2DjtwuwRDy/xmn7A9yTGJeQi2/17m9bTXH1ayAdjqAS2wHK17NoG8sk7r3zvwnq
+        6Ojg94Aq+k+g5gFLRdZ9xKq246g2hGKbl9OG/LdMPsLXPJy207EgaZbX1rJ3+9iOXcizxFDNg3iqHDoG
+        3b8LSWtUkG5ISfWqEmiN9VRvFKPjkYSqx+MoufvvEBt20o6KD0x+yS5/cNq9GPxlseHS8mKxKg4VRhaK
+        uyKoLLnQWsvRZ63mWAXtP+XoNMtQP5IC+SCLb29+g83F79X4COe9eOUvQoB43kdfXAtXlndKpyyTnTQ+
+        1Uf/gp4Mo60Ym9JRj6USMs1JfFkbqXpb8sb0Df054C4j36US7907ijZIDlZFl3x5/dPSnaWb0ldm+O9b
+        JHJf5JS9BAzzH7/9HVcB37PIAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btSua.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANoSURBVEhLzZV/TBNnGMcvig1CbWOB/qJ09IAug41I5jY3
-        szSSjbh/0EUElqDIIA0QgzK3qJNB3TTLQoh/aDaUbUQSRCFMNhs1YmzUSMdSbIrVtmiLoiKTViTdEpfs
-        7XfPJe/fZtdtyT7JJ3e5+95z7/u8ee+E/zULXm9uuL9/0/TJ4TUzM2PL+eV/B++u3Z0TW7bBt7kao+la
-        +Nsz0GwvWc9v/zNC3d0t4XYHnvYP4IbNxsY1ZhaxvwrnoZwZHkmexXDY6qutQ+S77xNPKmsQNFvZTZWZ
-        RY+uh6+3CHf6hl/m0eT4ubIysDA8goVPPkVULERML2JWawCwFyPVSgQOdq3jUfnccnzeOXvka4SPdLNQ
-        yZssZrAgoMxht8/b2NPIRhwWBPzq9yt5XB6PPZ63fU3bEf7maGKK+h4y5rGYRoT//WI2P/8h67UuhXtD
-        1Wc8Lo/rjc1dLpvtj7uDQ3jQ0IiHZiuiOhGP8k3UmjZc3GvCD4JygsflM7px0+V7jdvhKSjEWUMOc2n0
-        7Jd0PYv7auH9sTTxLbVmzu3W8bg87o+MVATa2nG+oyNxSZ2JaxlG1qNQJVzlVgZ8hb5CAd6m1joel0c8
-        Htder/rg98WfzmDyvXLmzjJiMF3F3Jk0ixf1zNn2Ak7mWc/wuHwmttW5ogOnsNhxAPPWYtzXmXEz04ih
-        dDXG1FoEUzQ4WFHxLo/LY+rYsfqI4wAivcdZbI0NIaPIotl58BlyaQ0MbGDJMtQLwqkCje4N/og8xsrL
-        wwsnBvCkqgZRUz5iVFxyRm/BeJoaoyWv9/CofB44ne9MtbQiVG9noYJXWMwoIpidxx7RxvJr9HCmpN3j
-        0eTwNNj7Hjq+QIA2VFBqDb3AT8cprQmupamIX7lSzKPJcXVdWWTW3ozH+UXUFhFzRgtua3PgUWViT4ri
-        Yx5Lnoui+Nv02lIatYVN0qIGs0yYoD3wpSJ1F4+sIC3kKlJaZMnVZCGpIp/PabU24NGbcTUrO3FDo8PY
-        ipV/Vi9JkYpLBTaQTeRuUvr2dJBt5EdkDZlPPp+5odLpc2lKjKYqn+1XKK5lCILUllZSKrifdJD7yB3k
-        VlKaQTb5936bkxdKxnc2ZAzSqVRgDymNUBpxC1lLlpEvkSvJVFI2enIt+Rb5GllE5pIaMqmC/xGC8Be4
-        EI14wlzYdAAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANlSURBVEhLzZVtTFNXGMdvlDUMahsL9I1S6QW6CBsZ2XyP
+        aSTO8EUlkQEmOGQyAsQw0RnfEOpbjDHGDxrDmIZIgiiErZnNNGJsZLNIUmCVjlZGYaIiY61I6pKZePr3
+        ucn5bLx1Jv6SX+7Nvf/73HOek3Ov8F4zOzSUHmxv3zRxuXv55KT7Q375/2Fo156TA1u2wvtlKXoStfA1
+        JqG2Kq+A33477jc31wUb7XjW3oF7Nhu7qzGz8arP4DydNskjsTMXDFq95RUInr8QfVpcBr/ZynwqMwt9
+        XwBvaw7G2ro/5tHYuFtc7J/tdmB2936ExGyE9SKmtAYA++AoVcJ/7NQaHpXPiP3wyamz5zB2tpkF8law
+        sMGCEWUaG71uY8/GC3FGEPC3z6fkcXnMeDyrvTXbMXauOXqf+h4wZrCwRsRwYS6bmalgrdb56NtYcpDH
+        5TFYXXvKZbO9+KuzC48qq/HYbEVIJ+JJpola04Cb+0z4UVAO8Lh8ego33X5QvR2erGz8YkhjLo2e9Sfq
+        WcRbjkFHfvQ8tWa6r0/H4/J46HAU+Rsaca2pKXpLnYzfkoysRaGKutZbGXACbdkChmrqK3hcHpFIRDtY
+        svnfuZ+vwluwnvWlGNGZqGLuZJrFR3rmbFiEyxnWqzwun4GtFa5QxxXMNR3FP9ZcPNSZ8UeyEV2JarjV
+        WgTiNDhWVPQFj8tjtKVl27j9KIKtF1l4uQ0Bo8hCqRn43ZBOa2BgHfM+wDZBuJKl0S3jj8jDvWFDcPZS
+        B56WlCFkykSYiktO6i3oT1CjJ2/pDzwqn0dO59rRunoEvv6GBbI+YWGjCH9qBntCG8un0cMZl/CAR2PD
+        U1nV9th+BCO0ofxSa+gFw3Qc1Zrgmh+PSG9vLo/Gxq9r1o1PVdViJjOH2iJi2mjBn9o0eFTJ2Bun+I7H
+        YuemKD6fWJVPo7YwLy1qIMWEAdoDxxXxu3hkAWkhPyWlRZb8nMwmVeTr+Umt9Xv0ZvSmpEaHNTq4Fyx8
+        WTovTiouFdhI1pB7SOnb00Q2kDvJMjKTfD3TXfkT1xKU6IlX/ndIobiTJAhSW+pJqeAh0k4eIL8lvyKl
+        GaSSb/bbvHcjr39HZVInnUoF9pLSCKUR15Hl5DpyMbmQjCdloydXkSvJJWQOmU5qyJgKviME4RXIkY1K
+        e/3q0AAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btXoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAARdSURBVEhLzZZ9TFZVHMfPveece5+XC5cHeYclLxZCExUF
-        o0mh6dxw9Adms/VHa9EI/xBqsiEJrBTiZY8RKEo8lEhJSCBvS4wI0xnE28OrUiKgoxmIzQXWoxK/zgNn
-        cwWMl7/6bHd3+/2+v+/O+Z3fzr3ISp6Pz8tNiYdaxooLhmrDd1UfUx0CZxLLJAuh1QUuTskNeyKvVYYG
-        j+UIQjXKcnZ2Ktnx0qmh/JMwUVEK7TFR9z739k7+BNnb8rolwcz1J7Tad2pCtzZ17I+ByuAgMApCA2o6
-        lNA9+dNVgObLAOdLAM7kwf3kOLgQuK7FpGhe4PULkoKQmE3FN+o2b+66GRcLPXEHoDwkpDTXYAjJQMgN
-        9RmP3rFcugjwXRVMnz4OU5mJAEnRANERYF6v/pVFxP3caw45hAR/6eBwsT9iN9yOjoKqLVvMOap+B0/P
-        ctLTc31FWNjH1w689uCxMRkgJQYeRYXDw4gA+HurGwx5KZBHcZYRIS0vQSaEbLKJmPC9u8vkyLYwaF3r
-        +zhb0SWlGwwql8zlI0rXff2Mz9neIP+p6chNYHneA8b9VPjdWw8DThIUSNiUjxDNlGWfc5J4qVNVYHCN
-        F9S4u40aMd7DbRbnBCEvVq/SXR30VmFstR6GnSUYdpCgywZDIRVqywi+3SsR6NVqoEQjd6cRFMRLlw47
-        OI1JEmMbbcmvAyqB6wqGXo0IZipCFxagVRTgNBUa2OR48ZKVkY6QxykiVLXJzJwI0C4g6EAIikWx56AO
-        uXDZyknRI6dCUfyhha24g5ub2buaiI/SKH2Ty1ZGKiGhX2H8SyczNDPjH9n7AmYtkgS4ocNQqyMTiYQ8
-        x+XLg01FeBUW73VaV8yeNraDIip8k8EGoEyDB4btKYy6ynBGkVpjEbLjZUsjTcLhNaJ412rexp5uZl7C
-        dnKEjac1nyJJ/mUq/nnyaR2MrlXAqKUfsrBgzS3KYUo3VojiyIw5a0kPO9g6Cf+ZKuNtXDLDYST5la/S
-        DEKwCldcNfcTEAnhqYVho6lj09FlNW9nq+5jvW7VYmBtSeSSfxGPaOBlD2l8eoMtFNvQehZaeBfWCyuX
-        CEXWVXeyOe/VitBvQ+AzDamPZ9cCl80hBePIZnu95Za3Aqmi+CoPz+UDjHfWU/ygjwrQzcyH7SjU2dC7
-        iZRu4JIFyZFx1h12X9UY5A620PkPPE9Rjl33eQr67bRw08CuAUcZUqX5W/NfmKlyXpHbb7jpIV0U9/Hw
-        E44i5Fr5rF/Pb5HhcCvAC8a89NBsL1uMWq07lyzKEYy3mx21UKKXCvcihHl4FqMsr6nbGToymfwejO/b
-        BZbtvtDnqD48qcqeXLIkTBqcf0UnTZRKyJeHZmFblIqDNpVPnf0UpjLiAeJegUZ/h/HjbOtcsiSYj2cR
-        JY1VlAbw0BOSJGl388HXLX98kQuDb++FTEWTwFPL4hxrD8w3ru+yr1W+v6+pNe6tobKNAd++z/4OeOr/
-        DkL/ANlWrkpk/GrkAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAARcSURBVEhLzZZ9TFdVGMfPveece38vFy4/5B2WvJgETVQE
+        jCaFpnPD0R+YzdYfrUUj/EOoyYYksFKIl/2MQEHiR4mUhATytsSIMJ1BvL8qJQI6moHYXGD9VOLp/OBs
+        roDx8lef7e5uz/N9vjvnOc/OvchCrpfXy00Jh1vGiwuGa8N2Vx9X7fxnEyskE6G1BU4OSQ17I65VhgSN
+        ZwtCNcp0dHQo2fnSqeH8PJisKIX26Mh7n3t6Jn2CbK153bJg5vqTWu07NSHbmjoORENlUCAYBaEBNR2O
+        75n66SpA82WA8yUAZ3LhflIsXPDf0GJSNC/w+kVJRkjMouIbdQEB3TdjY6A39iCUBweX5hgMwekIuaB+
+        47E75ksXAb6rgpnTJ2A6IwEgMQogKhw6N6p/ZRLxAPeaRzYhQV/a2V0cCN8Dt6MioWrr1s5sVb+Tp+fI
+        c3ffWBEa+vG1g689eGxMAkiOhkeRYfAw3A/+3uYCwx4K5FKcaURIy0uQCSGrLCLGf+/qNDW6PRRavdc/
+        zlJ0iWkGg8ol8/mI0g1fr/c62xfgOz0TsQXMz7vBhI8Kv3vqYdBBggIJm/IRohmy7HVOEi91qQoMrfOA
+        GleXMSPGe7nN0pwk5MXqNbqrQ54qjK/Vw4ijBCN2EnRbYSikQm0Zwbf7JAJ9Wg2UaOSeVIICeenyYQen
+        MUliTKM1+XVQJXBdwdCnEaGTitCNBWgVBThNhQY2OR68ZHWkIeR2ighVbTIzJwK0Cwg6EIJiUew9pENO
+        XLZ6kvXIoVAUf2hhK+7g5p3sXU3ER6mUvsllqyOFkJCvMP6lixl2MuMf2fsCZi2SBLihw1CrI5MJhDzH
+        5SuDTUVYFRbvdVlWzJ42toMiKnyTzgagTIMHR2wpjDnLcEaRWmMQsuFlyyNVwmE1onjXYt7Gnh5mXsJ2
+        cpSNpyWfLEm+ZSr+eeppHYw9o4BRSz9kYcGSW5IjlG6uEMXRWXPWkl52sHUS/jNFxtu5ZJYjSPIpX6MZ
+        giAVrjhr7scjEsxTi8NGU8emo9ti3s5W3c963arFwNqSwCX/Ig5R/8tu0sTMJmsotqL1LLT4LiwXVg4R
+        iiyr7mJz3qcVYcCKwGcaUh/HrgUum0cyxhHNtnrzLU8FUkTxVR6ezwcY76qn+EE/FaCHmY/YUKizoncT
+        KN3EJYuSLePMO+y+qjHIHWyhCx94rqIcv+71FAzYaOGmgV0D9jKkSAu35r8wU+W8IrffcNFDmiju5+En
+        HEPIufJZn97fIsLglp8HjHvoodlWNhu1WlcuWZKjGO/otNdCiV4q3IcQ5uE5jLK8rm5XyOhU0nswsX83
+        mHd4Q7+9+jBPld25ZFmYNDj/ik6aLJWQNw/NwbYoFQduKZ8++ylMp8cBxL4Cjb52EyfY1rlkWTAf9yJK
+        Gqso9eOhJyRK0p7mQ6+b//giB4be3gcZiiaep1bEOdYeWGhc32Vfq3xfb1Nr7FvDZZv9vn2f/R3w1P8d
+        hP4Bw5quR9pY2EQAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btInBaoCao.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAVbSURBVEhLrZULTFNnFMc7FRFUNCJDJ3vj4qJjT6eiYA0y
-        3xsOdCqKL8w2sxh1UVF8oY4NBQEFFRRRmDBAUB6CKNLKowJt5Q2drRShQKG8BhQs9N7/TnNJpgHDov6T
-        m3vz3fv9zvnO953/5Q2hYccvZxyIlvQJP5wxc07/2OuRV7hwVVY1W5tfDbT2AKt/PJxMw2O4t68gZ/eD
-        0wXVbJaIwMpmFr16BnoATps979Dr8dxXLyGr2bNN/KNyQvJqgdI6Ft06Bt29QGMHraAbWLbOwxBgHPf1
-        S+jbLZ72uZR1s5aBrg9o0QI1rYCske7/AIucD6TZzf1ha6C/KJhvv26vldXUKf1T/58cV++zTyxk0UPw
-        unZA3gSU1ANiFSAUd+Kn0JM97gXrEKLyR1VbCyQFDfqVK3fuoqnDOMIQsv1uj11Utg4ayrysAZASWFDa
-        i9+ib2B5Gh9uj2fhcIsTAnTrEazfhBJdLqqVT+HisucYTR/OUV4gS0vL0e47Ll0MSdWilrLPkQMhCRK4
-        xK2Cs+wT7GtaBr+e9TjPbIVvtyt21y+GU8UMpFQLIJZ2wtp6lnM/anCdDhCGN1Gdzyd24K6oCm6RO7BC
-        aoMd9Y7w6VyL8/otOKNzw37NCrjJbeEg/gjT7phjUpwJcmRN8D8rrCSMBUcbRF6/CyOibmmQcFOGmw9k
-        OF7ogbPtu3BG74bgvs3wav0e25TzsfThdHwqnIy3bo7GhCsjYerHw5rI7cjM7sHUD75a048bqKNeqTG5
-        BRrUa+j0tLGQqRXQNuvwl3Q/fq6dj5Vln2FWztt4J8UMEyNHYlyQEYy8eLDx+Rpx9xUQFQN8/pqLhDLm
-        iM8oIiJidEp6DaQVQG4hUFgJdFHntijVaFR04UTFEbyfNgYWMcYYf8EIJt48WByxwLGEaBQQOEsC3BMD
-        C7/ZlEo4M476jO7dK7cXF2tRShtbSEHyS7hA6mZqMuqDKuoNm6jpMDnJg7HnG9hy5SBED4FsKZCRzyI5
-        i0G8AHBYuHnwTjcEKJVpIX8CVFYBxY/oiJbT+S+jfqBeqKCxxHwFXMN2ISm3ASIKnlnAIjWHQYIQCI1r
-        QWiiHgscNr4gQHq5/aMqOp5q8h6yib+VBH0MFMm4+yNaQS5lbMhaSKW4LWJxQ8AiOl2HvV4ZWL5kI06E
-        NYPv8IIVpFOAmjotNFSOBtrkGmoyRQ1ZBGVerqBnWlmWlMHdPBZJ9xnE3GUREFmBfb4x8A6Kwvbdp7DT
-        Tw1bW5dYwg30qsxM2Vx1Qze0tLFt1AtNVHsVleYJ2QRXNgZ38vSIywAuXK/DwcAkePhew+HT13AqLAXX
-        szRQtgCnr5ZI3p22eHY/9j/FxsYOd3X1DM/Lr336lNyzi5yzhbq5kVajIqN7KGMRn8ngj8tF2OMTiV+O
-        ROKQXxyC4+VIkrC4XaSHSMagipJStQGHAtKuTppkPaDpRpqajvtitcuv4QKBQttJfmS4DIGyixiEJVOA
-        0HTsPv4nfMIliH/Qi4xSFmnSPojlDATFfVCqDf8O+nGQkkpZJTGtOPTzMqJYHy9Zsi0wOaWsvb2DyiNm
-        4B/HwH2/AKmiVnJSOvclDPIJnFHYhxIlA3kdR1ZoGJwIutUz3szsJLEmcsjBNYICTeXz13oHXypUe59T
-        dM+zc0md8p5NkIdvenE97ZVMxaKyhoGEytNBFh8UJcSmrUd7FzlueEDzP+cwQ8tgw4Yfyzy6rOkyNjc3
-        m/nlPKdTCcLHqi4CJ+ZWaRYsdW2ym7NCYWk5+dyoUaPs6TtK8NVk8uaECY5zHVedMR4xYruFufmGsaam
-        y2l8LPf6NSkwMHCguT0nHu9fr63hTRa2d/wAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAVaSURBVEhLrZUJTFRXFIanKiKoaESKVrpjY6Olq5WiII1i
+        XbBqATcUFWnTmsaojaKiIm4tCgIKKiqiUKEwgmwFUWRGlhGYGfZl6owzyjowbAUGHJj3/p7JI6kGjI31
+        T17ey33vfufcc+/5H+8FGnH0Stb+WMmA8P1Zs78aHHs18osUuuWomLrCR0B7H+D2w8FUGh7Hvf0fcvE6
+        MDNbxeSICKxqZdGvZ6AHsGKLz216PZH76iVkZWtrEhSTF15QB1Q0sOjVMejtB5q7aAW9wLL1ew0BJnBf
+        v4S+9fRxyKesW7UMdANAmxaobQdkzXT/G/jGZX+G/dw1W0OCRGGODuv3WFlNnzY49b/JabW3Q3IJiz6C
+        N3QC8hagvBEQ1wNCcTd+DD/Z51W0HuH1QVB2tEFS1KhftWrHTpo6giO8QHYrdtvH5OqgocwrmwApgQUV
+        /TgeexPOGY7weDgHh9pWIli3AWH6zSjX5eOR6glcXXcfoekjOcpzZGlpOdZr++VL4ela1FH2eXIgPFEC
+        V74bXGQfwbtlGQL7NuA8sxUBve7Y1bgYK6tnIe2RAGJpN6yt57gMoobX6WBhZAvV+XxyF+6IlPCI3o7l
+        Uhtsb3SCf/c6nNd74ozOA/s0y+Eht8MC8QeYcdscU/gmyJO1IOissIYwFhxtGPn9KoyK+VODxCQZku7L
+        cLRkL8527sQZvQfCBrbAr/07fK+aj6XFM/GxcCreSBqLSVdHwzSQh7XR25Cd24fp732xdhA3VIcPp8fl
+        F2nQqKHT08FCplZA26rDH9J9+KluPlZVfoI5eW/irTQzTI4ejQmhRjDy48HG/0vw7ykgKgMcHddcIpQx
+        R3xKUVFRY9MyayGtBvJLgJIaoIc6t02lRrOiB8eqffFuxjhYxBlj4gUjmJzgwcLXAkcSY1FE4BwJcFcM
+        LFy0OZ1wZhz1Kd29W+UgLtOigja2hIIUlnOB1K3UZNQHSuoNm5iZMDnJg7HPa/C8egCiYiBXCmQVskjN
+        YZAgABYs3DJ8pxsCVMi0kD8GapRA2QM6olV0/iupH6gXqmksuVAB94idSMlvgoiCZxexSM9jkCgELvLb
+        cDFZD8cFHs8JkFnl8EBJx1NN3kM28ZeKoA+BUhl3f0AryKeMDVkLqRS3RCxuCljEZuqwxy8Lzks24VhE
+        KwV4zgoyKUBtgxYaKkcTbXItNZmiliyCMq9S0DOtLEfK4E4Bi5R7DOLusAiOroZ3QBxOhMZg265T2BGo
+        hp2dazzhhnpVdrZsrrqpF1ra2A7qhRaqfT2V5jHZBFc2BrcL9OBnARduNOBASAr2BlzHodPXcSoiDTdy
+        NFC1AaevlUvenrHYdhD7r+Lj40e6u/tEFhTUPXlC7tlDztlG3dxMq6knoyuWsUjIZvDblVLs9o/Gz77R
+        OBjIR1iCHCkSFrdK9RDJGCgpqfoO4GBwxrUpU6yHNN1oU9MJn612+SVSIJBru8mPDJchUG4pg4hUCnAx
+        E7uO/g7/SAkS7vcjq4JFhnQAYjkDQdkAVGrDv4N+HKSUCkZFTCsO/ayMKNaHS5Z4haSkVnZ2dlF5xAyC
+        +Ay89gmQLmonJ6VzX86gkMBZJQMoVzGQN3BkhYbBsbNpfRPNzE4SazKHHF6jKNB0R8d1J8IuF6uPn5P3
+        zrN3TZ/2jk2od0BmWSPtlayeRU0tAwmVp4ssPjRGiE2evv2LnDbep/mfcpgXy2DDhh/LPLqs6TI2Nzeb
+        /fm8lacShQ/rewiclK/UfL3UvcXe1llhaTn13JgxYxzoO0rw/8nk9UmTnOY6uZ0xHjVqm4W5+cbxpqbO
+        ND6ee/2KFBISMtTcnhGP9w8lgeEqzwMT9gAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="ColumnTaiKhoan.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="ColumnQuyen.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="ColumnMatKhau.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
 </root>
